--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mongodb-migrate",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Migration framework for mongo in node",
   "keywords": [
     "mongo",
@@ -16,8 +16,11 @@
     "url": "git://github.com/afloyd/mongo-migrate"
   },
   "dependencies": {
-    "mongodb": ">=1.3.19 <3.0",
-    "verror": "^1.6.0"
+    "co": "^4.6.0",
+    "lodash": "~3.10.1",
+    "mongodb": ">= 2.0",
+    "q": "^1.4.1",
+    "verror": "^1.6.1"
   },
   "main": "index",
   "engines": {
