--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "co": "^4.6.0",
     "lodash": "~3.10.1",
-    "mongodb": ">= 2.0",
+    "mongodb": "2.2.36",
     "q": "^1.4.1",
     "verror": "^1.6.1"
   },
